--- a/notebooks/configs/experiments/hotpotqa_mipro_v1.yaml
+++ b/notebooks/configs/experiments/hotpotqa_mipro_v1.yaml
@@ -1,37 +1,13 @@
 name: hotpotqa_mipro_v1
 description: HotPotQA optimization using MIPROv2
 
-dataset:
-  name: hotpotqa
-  train_size: 100
-  dev_size: 20
-  test_size: 0
-  train_seed: 1
-  eval_seed: 2023
-  keep_details: true
-  params:
-    use_context: true
+# Reference shared configs
+dataset_ref: hotpotqa_standard
+model_ref: qwen3_4b
+optimizer_ref: mipro
+program_ref: mlflow_base
+logging_ref: logging
 
-model:
-  name: ollama_chat/qwen3:4b-instruct
-  api_base: http://localhost:11434
-  cache: true
-  params: {}
-
-optimizer:
-  name: mipro
-  auto: light
-  num_threads: 1
-  params: {}
-
-program:
-  name: mlflow_base_prompt
-  params: {}
-
-logging:
-  level: INFO
-  log_to_file: true
-  log_dir: results/logs
-  include_timestamps: true
+# Override only what's different from the baseline
+logging_overrides:
   save_models: true
-  model_dir: results/models
